Add Simple Login for Both Admin and Employee / Users

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,9 @@ PORT = 3000
 HOSTNAME = 0.0.0.0 # Change to your server IP (ipconfig)
 NODE_ENV = development
 
+# JWT Secret for session tokens (8 hours)
+JWT_SECRET = pos_pro_secret_key_2025_secure_token
+
 # Replace with your actual database credentials (MS SQL Server)
 DB_POS_USERNAME = your_username
 DB_POS_PASSWORD = your_password
