--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mssql": "^12.0.0",
+    "multer": "^2.0.2",
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
